# frommle

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/cppApps/: commandLineParsing.cpp  commandLineParsing.hpp  frommleinfo.cpp
apps/pyApps/: shklus
devtools/: debugpywithcpp.sh  py_cpp_tmuxdebug.sh
docs/: DimensionBase_8hpp.html  DimensionBase_8hpp_source.html  SDD.html  Software__Design_8md.html  Software__Design_8md_source.html  cpp.html  developer.html  dir_3f67f2eb34c119034b587c3b8d5ba10b.html  dir_3f67f2eb34c119034b587c3b8d5ba10b.js  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.js  dir_5245203c53797c9aa42146089cfd76f7.html  dir_5245203c53797c9aa42146089cfd76f7.js  dir_524e56b8c47610fa40ed8ac6f777cd37.html  dir_524e56b8c47610fa40ed8ac6f777cd37.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a8fc78e19f7bc283fea70d1c9dc25d46.html  dir_a8fc78e19f7bc283fea70d1c9dc25d46.js  dir_b92e437d682ceb8ea1cabc51ed11c23c.html  dir_b92e437d682ceb8ea1cabc51ed11c23c.js  dir_dfdbda394c3f7a3aa55229f33a559c41.html  dir_dfdbda394c3f7a3aa55229f33a559c41.js  files.html  (+16 more)
docsrc/: CMakeLists.txt  Doxyfile.in  addfavicon.pl  conf.py  conf.py.in  cpp.rst  developer.rst  index.rst  license.rst
docsrc/doxygenpages/: mainpage.md
docsrc/doxygenpages/SDD/: Software_Design.md
docsrc/examples/: GRACEOBP_SouthAtlantic.ipynb  GravityFunctionals.ipynb
docsrc/graphics/: makefavicon
pybindings/: CMakeLists.txt  PYCPPCollect_core.cpp  PYCPPCollect_geometry.cpp  PYCPPCollect_io.cpp  PYCPPCollect_sh.cpp
pybindings/core/: ExceptionBindings.cpp  FrommleBindings.cpp  GArrayBindings.cpp  GOperatorBindings.cpp  GuideBaseBindings.cpp  GuidePackBindings.cpp  GuidePackBindings.hpp  LoggerBindings.cpp  TreeNodeBindings.cpp  coreBindings.cpp  coreBindings.hpp  coreGuides.cpp  coreGuides.hpp  numpyConverting.cpp  numpyConverting.hpp  tupleconversion.cpp  tupleconversion.hpp
pybindings/earthmodels/: earthBindings.cpp
pybindings/geometry/: geometryBindings.cpp
pybindings/io/: ArchiveBindings.cpp  IOBindings.cpp  IOBindings.hpp
pybindings/sh/: SHBindings.cpp
python/: CMakeLists.txt  setup_template.py
python/frommle/: __init__.py
python/frommle/core/: Goperator.py  __init__.py  dimBindings.cpp  garray.py  guidepack.py  logger.py  operators.py  test.py  time.py  usersettings.py  vector.py
python/frommle/discover/: filesearch.py
python/frommle/discover/geoslurptools/: __init__.py  colquery.py  connect.py  shapetools.py
python/frommle/earthmodels/: Earthmodel.py  GreensFunctions.py  Love.py  __init__.py  earthmodel.py
python/frommle/geometry/: __init__.py  envelope.py
python/frommle/gravity/: Stokes2eqh.py  __init__.py  earth.py
python/frommle/io/: BINV.py  CFconventions.py  ConcatArchive.py  GSM.py  __init__.py  fileConcatArchive.py  icgem.py  json.py  netcdf.py  numpyVariable.py  openuri.py  shArchive.py  shConcatArchive.py  shio.py  shstandard.py  writeNcGrids.py
python/frommle/io/geoslurp/: __init__.py  geoslurpArchive.py  sh.py
python/frommle/sh/: DDKfilter.py  __init__.py  analysis.py  polygon2sh.py  rastio2sh.py  shIsoOperator.py  shdata.py  shxarray.py  synthesis.py  xyz2sh.py
src/: CMakeLists.txt
src/core/: AnnotedArrayBase.hpp  Attributes.hpp  BLASinterface.hpp  Constants.hpp  DiagGOperator.hpp  DimensionBase.hpp  Exceptions.hpp  FortranCalling.hpp  GArrayBase.hpp  GArrayDense.hpp  GArrayDiag.hpp  GArrayDiagonal.hpp  GArrayReplicate.hpp  GOperatorBase.cpp  GOperatorBase.hpp  GOperatorDiag.hpp  GPCookieCut.hpp  GPROJOperator.hpp  GuideAppender.hpp  GuideBase.cpp  GuideBase.hpp  GuidePack.cpp  GuidePack.hpp  GuidePacktemplated.hpp  GuideRegistry.hpp  GuideSorting.hpp  HybridGuide.hpp  Hyperslab.cpp  Hyperslab.hpp  IndexGuide.hpp  IndexedGuide.hpp  InputArchiveBase.cpp  InputArchiveBase.hpp  Logging.cpp  Logging.hpp  MacroMagic.hpp  MarrayEig.hpp  MarrayWrapper.hpp  NonIndexedGuide.hpp  OperatorBase.hpp  (+20 more)
src/cpp/: CMakeLists.txt  DimensionBase.hpp  TimeDimension.hpp
src/earthmodels/: EarthConstants.cpp  EarthConstants.hpp
src/geometry/: GeoGrid.cpp  GeoGrid.hpp  GeoPoints.cpp  GeoPoints.hpp  GeoTypes.hpp  GuideMakerTools.cpp  GuideMakerTools.hpp  OGR2boost.hpp  OGRGuide.cpp  OGRGuide.hpp  OGRiteratorBase.hpp  Rtree.hpp  Vec3DGuide.hpp  fibonacciGrid.cpp  fibonacciGrid.hpp  geomOperator.hpp
src/helpers/: commandLineParsing.cpp  commandLineParsing.hpp
src/io/: ArIO.hpp  ArItem.cpp  ArItem.hpp  ArchiveBase.hpp  CFConventions.cpp  CFConventions.hpp  Conventions.cpp  Conventions.hpp  Group.cpp  Group.hpp  GroupBase.cpp  GroupBase.hpp  InputArchiveBase.cpp  InputArchiveBase.hpp  LineBuffer.cpp  LineBuffer.hpp  NetCDFIO.cpp  NetCDFIO.hpp  OGRArchive.cpp  OGRArchive.hpp  OGRIArchive.cpp  OGRIArchive.hpp  OGRIOArchives.cpp  OGRIOArchives.hpp  OGROArchive.hpp  ValueItem.hpp  VarItem.hpp  Variable.hpp  geoslurp.hpp  getpass.cpp  getpass.hpp
src/pybindings/: ElementBindings.cpp  ElementBindings.hpp  GArrayBindings.cpp  GOperatorBindings.cpp  GuideBaseBindings.cpp  GuidePackBindings.cpp  GuidePackBindings.hpp  PYCPPCollect.cpp  PYCPPCollect_core.cpp  PYCPPCollect_earth.cpp  SHBindings.cpp  SHDimensionBindings.cpp  coreBindings.cpp  coreBindings.hpp  coreGuides.cpp  datetimeconversion.cpp  datetimeconversion.hpp  geometryBindings.cpp  numpyConverting.cpp  numpyConverting.hpp  tupleconversion.cpp  tupleconversion.hpp
src/pywrap/: CMakeLists.txt
src/sealevel/: OceanFunction.hpp  SealevelEq.hpp
src/sh/: Deg1ToGeocXYZ.hpp  Legendre.cpp  Legendre.hpp  Legendre_nm.cpp  Legendre_nm.hpp  Legendre_nm_naive.cpp  Legendre_nm_naive.hpp  SHDimension.hpp  SHGuide.cpp  SHGuide.hpp  SHanalysis.hpp  SHfunctions.hpp  SHisoOperator.hpp  Ynm.hpp  xyz2SH.hpp
tests/: CMakeLists.txt
tests/PyTests/: Guidetests.py  TestGravFunctionals.py  TestLegendre.py  TestStokes2eqh.py  TestSurfaceLoading.py  shio_n_conversion.py  testDDKfilter.py  testGarray.py  testShformats.py
tests/cppTests/: GOperatorTesting.cpp  GeometryTesting.cpp  GuideTesting.cpp  IOtesting.cpp  SHtesting.cpp  coretesting.cpp
tests/data/: itsg2018_sample.db  testpolygonswkt.txt
(+11 files in other folders)
